# timeseries

./: .bandit  .editorconfig  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .sublime-settings.json  .vimrc  DEVELOPMENT.md  EDITOR_SETUP.md  FORMATTING.md  LICENSE  Makefile  README.md  dev.py  pyproject.toml  requirements.txt  setup.py  setup_svg_rendering.sh
.cursor/rules/: weather-tool-rules.mdc
config/: airport_list.csv  airport_list_advanced.csv  airports.csv  settings.yaml
docs/: BIN_SCRIPTS.md  DEVELOPMENT.md  FORMATTING.md  GETTING_STARTED.md
notebooks/: README.md
scripts/: download_metno_icons.py
src/weather_tool/: __init__.py  cli.py
src/weather_tool/airports/: __init__.py  manager.py
src/weather_tool/core/: __init__.py  config.py  weather_plotter.py
src/weather_tool/data/: __init__.py  interfaces.py  metno_unified.py
src/weather_tool/plotting/: __init__.py  components.py  config_helper.py  grid_manager.py  icon_manager.py  interfaces.py  layout_formatter.py  legend_interfaces.py  legend_plotter.py  parameter_plotter.py  plotters.py  svg_renderer.py  symbol_mapping.py  symbol_processor.py  symbols.py
src/weather_tool/utils/: __init__.py  helpers.py  logging.py
tests/: README_VISUAL_TESTS.md  run_visual_tests.py  test_meteogram_visual.py  test_norwegian_meteogram_visual.py
